--- a/src/FDM/Makefile.am
+++ b/src/FDM/Makefile.am
@@ -1,4 +1,4 @@
-SUBDIRS	= Balloon JSBsim LaRCsim UIUCModel
+SUBDIRS	= Balloon JSBSim LaRCsim UIUCModel
 
 noinst_LIBRARIES = libFlight.a
 
@@ -6,7 +6,7 @@ libFlight_a_SOURCES = \
 	Balloon.cxx Balloon.h \
 	External.cxx External.hxx \
 	flight.cxx flight.hxx \
-	JSBsim.cxx JSBsim.hxx \
+	JSBSim.cxx JSBSim.hxx \
 	LaRCsim.cxx LaRCsim.hxx \
 	MagicCarpet.cxx MagicCarpet.hxx
 
