Added code to put aircraft at the end of the runway closest to the desired heading.  Only changed for initial position right now.

--- a/src/Airports/Makefile.am
+++ b/src/Airports/Makefile.am
@@ -1,12 +1,15 @@
 noinst_LIBRARIES = libAirports.a
 
-noinst_PROGRAMS = buildsimple
+noinst_PROGRAMS = gensimple genrunways
 
 libAirports_a_SOURCES = \
+	runways.cxx runways.hxx \
 	simple.cxx simple.hxx
 
-buildsimple_SOURCES = buildsimple.cxx
+gensimple_SOURCES = gensimple.cxx
+gensimple_LDADD = libAirports.a -lsgdebug -lsgmisc -lmk4 -lz
 
-buildsimple_LDADD = libAirports.a -lsgdebug -lsgmisc -lmk4 -lz
+genrunways_SOURCES = genrunways.cxx
+genrunways_LDADD = libAirports.a -lsgdebug -lsgmisc -lmk4 -lz
 
 INCLUDES += -I$(top_builddir) -I$(top_builddir)/src
