--- a/src/Cockpit/Makefile.am
+++ b/src/Cockpit/Makefile.am
@@ -8,6 +8,7 @@ libCockpit_a_SOURCES = \
 	hud_lat.cxx hud_lon.cxx \
 	hud_scal.cxx hud_tbi.cxx \
 	panel.cxx panel.hxx \
+        panel_io.cxx panel_io.hxx \
 	radiostack.cxx radiostack.hxx \
 	sp_panel.cxx sp_panel.hxx \
 	steam.cxx steam.hxx
