--- a/src/Main/Makefile.am
+++ b/src/Main/Makefile.am
@@ -64,7 +64,7 @@ fgfs_LDADD = \
 	$(WEATHER_LIBS) \
 	$(top_builddir)/src/Joystick/libJoystick.a \
 	-lsgsky -lsgephem -lsgtiming -lsgio -lsgscreen -lsgmath -lsgbucket \
-	-lsgdebug -lsgmagvar -lsgmisc \
+	-lsgdebug -lsgmagvar -lsgmisc -lsgxml \
 	$(SERIAL_LIBS) \
 	-lplibpu -lplibfnt -lplibssg -lplibsg \
 	-lmk4 -lz \
