Sep 1 2000 updates from the UIUC team.

--- a/src/FDM/UIUCModel/Makefile.am
+++ b/src/FDM/UIUCModel/Makefile.am
@@ -1,42 +1,48 @@
 
+
 noinst_LIBRARIES = libUIUCModel.a
 
 libUIUCModel_a_SOURCES = \
-	uiuc_1DdataFileReader.h \
-	uiuc_1DdataFileReader.cpp \
-	uiuc_1Dinterpolation.h \
-	uiuc_1Dinterpolation.cpp \
-	uiuc_2DdataFileReader.h \
-	uiuc_2DdataFileReader.cpp \
-	uiuc_2Dinterpolation.h \
-	uiuc_2Dinterpolation.cpp \
-	uiuc_aerodeflections.h \
-	uiuc_aerodeflections.cpp \
-	uiuc_aircraft.h \
-	uiuc_aircraftdir.h \
-	uiuc_coefficients.h \
-	uiuc_coefficients.cpp \
-	uiuc_convert.h \
-	uiuc_convert.cpp \
-	uiuc_engine.h\
-	uiuc_engine.cpp\
-	uiuc_ice.h \
-	uiuc_ice.cpp \
-	uiuc_initializemaps.h \
-	uiuc_initializemaps.cpp \
-	uiuc_initializemaps1.cpp \
-	uiuc_initializemaps2.cpp \
-	uiuc_initializemaps3.cpp \
-	uiuc_initializemaps4.cpp \
-	uiuc_menu.h \
-	uiuc_menu.cpp \
-	uiuc_parsefile.h \
-	uiuc_parsefile.cpp \
-	uiuc_recorder.h \
-	uiuc_recorder.cpp \
-	uiuc_warnings_errors.h \
-	uiuc_warnings_errors.cpp \
-	uiuc_wrapper.h \
-	uiuc_wrapper.cpp 
-
-INCLUDES += -I$(top_builddir)
+                        uiuc_1DdataFileReader.cpp \
+                        uiuc_1Dinterpolation.cpp \
+                        uiuc_2DdataFileReader.cpp \
+                        uiuc_2Dinterpolation.cpp \
+                        uiuc_aerodeflections.cpp \
+                        uiuc_betaprobe.cpp \
+                        uiuc_coefficients.cpp \
+                        uiuc_coef_drag.cpp \
+                        uiuc_coef_lift.cpp \
+                        uiuc_coef_pitch.cpp \
+                        uiuc_coef_sideforce.cpp \
+                        uiuc_coef_roll.cpp \
+                        uiuc_coef_yaw.cpp \
+			uiuc_controlInput.cpp \
+                        uiuc_convert.cpp \
+                        uiuc_engine.cpp\
+                        uiuc_ice.cpp \
+                        uiuc_initializemaps.cpp \
+			uiuc_map_CD.cpp \
+			uiuc_map_CL.cpp \
+			uiuc_map_Cm.cpp \
+			uiuc_map_Cn.cpp \
+			uiuc_map_controlSurface.cpp \
+			uiuc_map_Croll.cpp \
+			uiuc_map_CY.cpp \
+			uiuc_map_engine.cpp \
+			uiuc_map_geometry.cpp \
+			uiuc_map_ice.cpp \
+			uiuc_map_init.cpp \
+			uiuc_map_keyword.cpp \
+			uiuc_map_mass.cpp \
+			uiuc_map_misc.cpp \
+			uiuc_map_record1.cpp \
+			uiuc_map_record2.cpp \
+			uiuc_map_record3.cpp \
+			uiuc_map_record4.cpp \
+			uiuc_map_record5.cpp \
+                        uiuc_menu.cpp \
+                        uiuc_parsefile.cpp \
+                        uiuc_recorder.cpp \
+                        uiuc_warnings_errors.cpp \
+                        uiuc_wrapper.cpp \
+INCLUDES += -I$(top_builddir) 
