Explicitely add -lpthread to the link line to avoid a long standing linux ld bug.
A couple namespace fixes to avoid problems with latest plib cvs on some
systems.

--- a/src/Include/config.h.in
+++ b/src/Include/config.h.in
@@ -225,6 +225,9 @@
 /* Define if you have the m library (-lm).  */
 #undef HAVE_LIBM
 
+/* Define if you have the pthread library (-lpthread).  */
+#undef HAVE_LIBPTHREAD
+
 /* Define if you have the socket library (-lsocket).  */
 #undef HAVE_LIBSOCKET
 
