Tweaks to the runfgfs.bat script.

--- a/src/Main/Makefile.am
+++ b/src/Main/Makefile.am
@@ -29,7 +29,9 @@ EXTRA_DIST = 3dfx.sh runfgfs.in runfgfs.bat.in
 
 bin_PROGRAMS = fgfs
 
-bin_SCRIPTS = runfgfs runfgfs.bat
+noinst_SCRIPTS = runfgfs runfgfs.bat
+
+bin_SCRIPTS = runfgfs
 
 fgfs_SOURCES = \
 	main.cxx \
