builddir -> srcdir so builds can be done outside the master source directory.

--- a/src/Aircraft/Makefile.am
+++ b/src/Aircraft/Makefile.am
@@ -2,4 +2,4 @@ noinst_LIBRARIES = libAircraft.a
 
 libAircraft_a_SOURCES = aircraft.cxx aircraft.hxx
 
-INCLUDES += -I$(top_builddir) -I$(top_builddir)/src
+INCLUDES += -I$(top_srcdir) -I$(top_srcdir)/src
