--- a/src/Autopilot/Makefile.am
+++ b/src/Autopilot/Makefile.am
@@ -4,4 +4,4 @@ libAutopilot_a_SOURCES = \
 	auto_gui.cxx auto_gui.hxx \
 	newauto.cxx newauto.hxx
 
-INCLUDES += -I$(top_builddir) -I$(top_builddir)/src
+INCLUDES += -I$(top_srcdir) -I$(top_srcdir)/src
