--- a/src/Include/config.h.in
+++ b/src/Include/config.h.in
@@ -225,6 +225,9 @@
 /* Define if you have the m library (-lm).  */
 #undef HAVE_LIBM
 
+/* Define if you have the plibul library (-lplibul).  */
+#undef HAVE_LIBPLIBUL
+
 /* Define if you have the pthread library (-lpthread).  */
 #undef HAVE_LIBPTHREAD
 
