--- a/src/Main/Makefile.am
+++ b/src/Main/Makefile.am
@@ -73,4 +73,4 @@ fgfs_LDADD = \
 	$(opengl_LIBS) \
 	$(audio_LIBS)
 
-INCLUDES += -I$(top_builddir) -I$(top_builddir)/src
+INCLUDES += -I$(top_srcdir) -I$(top_srcdir)/src
