--- a/src/NetworkOLK/Makefile.am
+++ b/src/NetworkOLK/Makefile.am
@@ -4,4 +4,4 @@ libNetworkOLK_a_SOURCES = \
 	net_send.cxx net_hud.cxx network.cxx network.h fgd.h \
 	features.cxx features.hxx
 
-INCLUDES += -I$(top_builddir) -I$(top_builddir)/src
+INCLUDES += -I$(top_srcdir) -I$(top_srcdir)/src
