--- a/src/Weather/Makefile.am
+++ b/src/Weather/Makefile.am
@@ -6,4 +6,4 @@ noinst_LIBRARIES = libWeather.a
 
 libWeather_a_SOURCES = weather.cxx weather.hxx
 
-INCLUDES += -I$(top_builddir) -I$(top_builddir)/src
+INCLUDES += -I$(top_srcdir) -I$(top_srcdir)/src
