--- a/src/FDM/Balloon/Makefile.am
+++ b/src/FDM/Balloon/Makefile.am
@@ -2,4 +2,4 @@ noinst_LIBRARIES = libBalloon.a
 
 libBalloon_a_SOURCES = BalloonSim.cpp BalloonSim.h
 
-INCLUDES += -I$(top_builddir) -I$(top_builddir)/src
+INCLUDES += -I$(top_srcdir) -I$(top_srcdir)/src
