--- a/src/GUI/Makefile.am
+++ b/src/GUI/Makefile.am
@@ -2,4 +2,4 @@ noinst_LIBRARIES = libGUI.a
 
 libGUI_a_SOURCES = gui.cxx gui.h
 
-INCLUDES += -I$(top_builddir) -I$(top_builddir)/src
+INCLUDES += -I$(top_srcdir) -I$(top_srcdir)/src
