Renamed fg_types.hxx -> sg_types.hxx Started work on an interactive property manager traverser/setter.

--- a/src/FDM/Makefile.am
+++ b/src/FDM/Makefile.am
@@ -3,10 +3,10 @@ SUBDIRS	= Balloon JSBSim LaRCsim UIUCModel
 noinst_LIBRARIES = libFlight.a
 
 libFlight_a_SOURCES = \
-	10520d.cxx 10520d.hxx \
 	Balloon.cxx Balloon.h \
 	External.cxx External.hxx \
 	flight.cxx flight.hxx \
+	IO360.cxx IO360.hxx \
 	JSBSim.cxx JSBSim.hxx \
 	LaRCsim.cxx LaRCsim.hxx \
 	MagicCarpet.cxx MagicCarpet.hxx
