--- a/src/Joystick/Makefile.am
+++ b/src/Joystick/Makefile.am
@@ -6,4 +6,6 @@ noinst_PROGRAMS = js_demo
 
 js_demo_SOURCES = js_demo.cxx
 
+js_demo_LDADD = $(audio_LIBS)
+
 INCLUDES += -I$(top_srcdir) -I$(top_srcdir)/src
