Continued FGViewer cleanups.  FGViewer is now a base class so that we can derive specific viewer classes from it.  Here's what I currently have in mind:
FGViewer
  |
  |-> FGViewerPRH     (current system with orientation specified in
  |                    LaRCsim Euler angle convention)
  |
  |-> FGViewerLookAt  Feed in a position, view direction, and up vector
  |
  |-> FGViewerHPR     (similar to PRH, but using ssg hpr euler angle
  |                    convention)
  |-> others?

--- a/src/Main/Makefile.am
+++ b/src/Main/Makefile.am
@@ -43,7 +43,8 @@ fgfs_SOURCES = \
 	options.cxx options.hxx \
 	save.cxx save.hxx \
 	splash.cxx splash.hxx \
-	viewer.cxx viewer.hxx
+	viewer.cxx viewer.hxx \
+	viewer_rph.cxx viewer_rph.hxx
 
 fgfs_LDADD = \
 	$(top_builddir)/src/Aircraft/libAircraft.a \
