Check point ... making progress with a FGViewerLookAt class so we can more easily do nifty external views.

--- a/src/Main/Makefile.am
+++ b/src/Main/Makefile.am
@@ -44,6 +44,7 @@ fgfs_SOURCES = \
 	save.cxx save.hxx \
 	splash.cxx splash.hxx \
 	viewer.cxx viewer.hxx \
+	viewer_lookat.cxx viewer_lookat.hxx \
 	viewer_rph.cxx viewer_rph.hxx
 
 fgfs_LDADD = \
