Moved fov and win_ration from FGOptions to FGViewer so we can control these on a per view basis. Fixed some compile warnings in Main/*.cxx

--- a/src/Main/Makefile.am
+++ b/src/Main/Makefile.am
@@ -20,7 +20,7 @@ NETWORK_LIBS = \
 endif
 
 if OLD_AUTOMAKE
-CXXFLAGS += -DPKGLIBDIR=\"$(pkglibdir)\"
+# nothing CXXFLAGS += -DPKGLIBDIR=\"$(pkglibdir)\"
 else
 AM_CXXFLAGS = -DPKGLIBDIR=\"$(pkglibdir)\"
 endif
