Rewrote the tile scheme to use a "map" structure rather than "vector" structure.  The new approach is simpler, more flexible, and more dynamics. We can now dynamically size the tile cache up and down.  Also, the range of tiles to load is now dependent on visibility and is calculated to always bring in enough tiles.

--- a/src/Scenery/Makefile.am
+++ b/src/Scenery/Makefile.am
@@ -2,8 +2,8 @@ noinst_LIBRARIES = libScenery.a
 
 libScenery_a_SOURCES = \
 	hitlist.cxx hitlist.hxx \
+	newcache.cxx newcache.hxx \
 	scenery.cxx scenery.hxx \
-	tilecache.cxx tilecache.hxx \
 	tileentry.cxx tileentry.hxx \
 	tilemgr.cxx tilemgr.hxx
 
