1. Added src/Main/fgfs.hxx as a standard, top-level include file for FlightGear subsystems -- it isolates some of the config and #ifdef stuff in a single place.
2. Added a new FGSubsystem interface, defined in fgfs.hxx; so far,
only FGControls implements it, but if that works, we can start letting
it propagate through the system and simplify the code in main.cxx and
fg_init.cxx (which is terrifyingly complex for anyone new to the
project).

3. Added new src/Main/fgfs_props.[hc]xx files with convenience
functions for tying properties under FlightGear.

4. Experimentally modified src/Controls/controls.cxx to tie properties
directly (rather than tying to BFI functions).  I'd appreciate it if
you could get this into CVS as soon as possible, so we can see if the
template stuff causes trouble for any other platforms before I add
properties to the other subsystems.

5. Miscellaneous superficial modifications to other files.


In addition, I've made a couple of further changes:


6. Modified BFI to add support for setting the view axes (i.e. with a
joystick hat).

7. Cleaned up bfi.cxx and removed all cout statements.

--- a/src/Main/Makefile.am
+++ b/src/Main/Makefile.am
@@ -38,10 +38,11 @@ fgfs_SOURCES = \
 	bfi.cxx bfi.hxx \
 	fg_init.cxx fg_init.hxx \
 	fg_io.cxx fg_io.hxx \
+	fg_props.cxx fg_props.hxx \
+        fgfs.cxx fgfs.hxx \
 	globals.cxx globals.hxx \
 	keyboard.cxx keyboard.hxx \
 	options.cxx options.hxx \
-	save.cxx save.hxx \
 	splash.cxx splash.hxx \
 	viewer.cxx viewer.hxx \
 	viewer_lookat.cxx viewer_lookat.hxx \
