--- a/src/Navaids/Makefile.am
+++ b/src/Navaids/Makefile.am
@@ -8,6 +8,6 @@ libNavaids_a_SOURCES = \
 	nav.hxx navlist.hxx navlist.cxx
 
 testnavs_SOURCES = testnavs.cxx
-testnavs_LDADD = libNavaids.a -lsgmath -lsgmisc -lsgdebug -lz
+testnavs_LDADD = libNavaids.a -lsgmath -lsgmisc -lsgdebug -lsgmagvar -lz
 
 INCLUDES += -I$(top_srcdir) -I$(top_srcdir)/src
