Norman Vine has split up the GUI code into more managable/logical sections.

--- a/src/GUI/Makefile.am
+++ b/src/GUI/Makefile.am
@@ -1,5 +1,11 @@
 noinst_LIBRARIES = libGUI.a
 
-libGUI_a_SOURCES = gui.cxx gui.h
+libGUI_a_SOURCES = \
+	apt_dlg.cxx apt_dlg.hxx \
+	gui.cxx gui.h \
+	gui_local.cxx gui_local.hxx \
+	mouse.cxx \
+	net_dlg.cxx net_dlg.hxx \
+	trackball.c trackball.h
 
 INCLUDES += -I$(top_srcdir) -I$(top_srcdir)/src
