Initial revision of atlas.cxx atlas.hxx

--- a/src/Network/Makefile.am
+++ b/src/Network/Makefile.am
@@ -2,13 +2,14 @@ noinst_LIBRARIES = libNetwork.a
 
 libNetwork_a_SOURCES = \
 	protocol.cxx protocol.hxx \
-	native.cxx native.hxx \
+	atlas.cxx atlas.hxx \
 	garmin.cxx garmin.hxx \
+	joyclient.cxx joyclient.hxx \
+	native.cxx native.hxx \
 	nmea.cxx nmea.hxx \
 	props.cxx props.hxx \
 	pve.cxx pve.hxx \
 	ray.cxx ray.hxx \
-	rul.cxx rul.hxx \
-	joyclient.cxx joyclient.hxx
+	rul.cxx rul.hxx
 
 INCLUDES += -I$(top_srcdir) -I$(top_srcdir)/src
