--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -1,4 +1,4 @@
-bin_PROGRAMS = est-epsilon gl-info test-mktime
+bin_PROGRAMS = est-epsilon gl-info test-mktime test-up
 
 est_epsilon_SOURCES = est-epsilon.c
 est_epsilon_LDADD = $(base_LIBS)
@@ -8,3 +8,6 @@ gl_info_LDADD = $(opengl_LIBS)
 
 test_mktime_SOURCES = test-mktime.cxx
 test_mktime_LDADD = $(base_LIBS)
+
+test_up_SOURCES = test-up.cxx
+test_up_LDADD = -lsgmath -lsgdebug -lplibsg $(base_LIBS)
