Contributed by Dave Luff:
Added fuel-flow and total fuel to the LaRCSim model.  Its still a bit
rough for now but it works, except the engine dosn't stop when fuel runs
out at the moment since there's no refuelling capability in the sim just
now.  It takes about 4 gallons use before you see the fuel guages begin
to drop since there's 28 gal per tank but the guages go to 26.

--- a/src/Main/Makefile.am
+++ b/src/Main/Makefile.am
@@ -69,8 +69,8 @@ fgfs_LDADD = \
 	$(top_builddir)/src/Time/libTime.a \
 	$(WEATHER_LIBS) \
 	$(top_builddir)/src/Joystick/libJoystick.a \
-	-lsgroute -lsgsky -lsgephem -lsgtiming -lsgio -lsgscreen -lsgmath \
-	-lsgbucket -lsgdebug -lsgmagvar -lsgmisc -lsgxml \
+	-lsgroute -lsgsky -lsgephem -lsgmetar -lsgtiming -lsgio -lsgscreen \
+	-lsgmath -lsgbucket -lsgdebug -lsgmagvar -lsgmisc -lsgxml \
 	$(SERIAL_LIBS) \
 	-lplibpu -lplibfnt -lplibssg -lplibsg \
 	-lmk4 -lz \
