--- a/src/Include/config.h.in
+++ b/src/Include/config.h.in
@@ -38,6 +38,10 @@
 #undef ENABLE_PLIB_JOYSTICK
 
    
+/* Define to enable plib joystick support (recommended) */
+#undef PLIB_AUDIO_IS_BROKEN
+
+   
 /* Define to eliminate all trace of debugging messages such as for a 
    release build */
 #undef FG_NDEBUG
