Tweaks to PLIB version detection.

--- a/src/Include/config.h.in
+++ b/src/Include/config.h.in
@@ -39,7 +39,7 @@
 
    
 /* Define to enable plib joystick support (recommended) */
-#undef PLIB_AUDIO_IS_BROKEN
+#undef PLIB_1_2_X
 
    
 /* Define to eliminate all trace of debugging messages such as for a 
