Initial revision of mkrbeacons.[ch]xx Additions to query and report if we are over a marker beacon.

--- a/src/Navaids/Makefile.am
+++ b/src/Navaids/Makefile.am
@@ -5,6 +5,7 @@ noinst_PROGRAMS = testnavs
 libNavaids_a_SOURCES = \
 	fix.hxx fixlist.hxx fixlist.cxx \
 	ils.hxx ilslist.hxx ilslist.cxx \
+	mkrbeacons.hxx mkrbeacons.cxx \
 	nav.hxx navlist.hxx navlist.cxx
 
 testnavs_SOURCES = testnavs.cxx
