Added support for reading ~/.fgfsrc.hostname files.

--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -1,10 +1,13 @@
-bin_PROGRAMS = est-epsilon gl-info test-mktime test-up
+bin_PROGRAMS = est-epsilon gl-info test-gethostname test-mktime test-up
 
 est_epsilon_SOURCES = est-epsilon.c
 est_epsilon_LDADD = $(base_LIBS)
 
 gl_info_SOURCES = gl-info.c
 gl_info_LDADD = $(opengl_LIBS)
+
+test_gethostname_SOURCES = test-gethostname.cxx
+test_gethostname_LDADD = $(base_LIBS)
 
 test_mktime_SOURCES = test-mktime.cxx
 test_mktime_LDADD = $(base_LIBS)
