Added marker beacon sound effects.

--- a/src/Sound/Makefile.am
+++ b/src/Sound/Makefile.am
@@ -1,6 +1,7 @@
 noinst_LIBRARIES = libSound.a
 
 libSound_a_SOURCES = \
+	beacon.cxx beacon.hxx \
 	morse.cxx morse.hxx \
 	soundmgr.cxx soundmgr.hxx
 
