--- a/src/Scenery/Makefile.am
+++ b/src/Scenery/Makefile.am
@@ -1,6 +1,7 @@
 noinst_LIBRARIES = libScenery.a
 
 libScenery_a_SOURCES = \
+	FGTileLoader.cxx FGTileLoader.hxx \
 	hitlist.cxx hitlist.hxx \
 	newcache.cxx newcache.hxx \
 	scenery.cxx scenery.hxx \
